Add reproduction demo

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,1 +1,12 @@
-{}
+{
+  "options": {
+    "label1": "Label 1",
+    "label2": "Label 2",
+    "label3": "Label 3"
+  },
+  "values": {
+    "input1": "Input 1",
+    "input2": "Input 2",
+    "input3": "Input 3"
+  }
+}
